# DoCon

./: 2.12.txt  announce.txt  install.txt  license.txt
docon/: manual.latex
docon/source/: AlgSymmF.hs  Categs.hs  Categs_.hs  Char_.hs  Common_.hs  DExport.hs  DPair.hs  DPair_.hs  DPrelude.hs  Det_.hs  EPol0_.hs  EPol1_.hs  EPol_.hs  FAA0_.hs  FAANF_.hs  Fract_.hs  Fraction.hs  FreeMonoid.hs  GBasEuc_.hs  GBasFld_.hs  GBas_.hs  GBasis.hs  HookBand_.hs  IdealSyz_.hs  Iparse_.hs  LinAlg.hs  List_.hs  Makefile  Matr0_.hs  Matr1_.hs  OpTab_.hs  PP_.hs  Partit_.hs  Partition.hs  Permut.hs  Pfact0_.hs  Pfact1_.hs  Pfact2_.hs  Pfact3_.hs  Pfact_.hs  (+49 more)
docon/source/demotest/: Main.hs  T_.hs  T_cubeext.hs  T_demo1.hs  T_detinterp.hs  T_diagmatr.hs  T_finfield.hs  T_grbas1.hs  T_grbas2.hs  T_permut.hs  T_pfactor.hs  T_polArit.hs  T_primes.hs  T_reseuc.hs  T_rpol.hs  T_solveCubic.hs  T_sphGeo.hs  T_symfunc.hs
docon/source/demotest/separateDemo/: CharPolDiscr.hs  CubicExt.hs  CyclicInt.hs  GCDPolRes.hs  GaussPrimes.hs  QuarticMystery.hs  gPrimes.tex  primGauss.txt
